--- a/GA.ipynb
+++ b/GA.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "b46a4d79",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "524df305",
    "metadata": {},
    "outputs": [
@@ -295,15 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "b3ac5b63",
    "metadata": {},
    "outputs": [],
    "source": [
     "BASE_DIR = os.path.abspath(os.path.dirname(os.path.dirname('.')))\n",
     "data_dir = os.path.join(BASE_DIR, 'evrp-benchmark-set')\n",
-    "result_dir = os.path.join(BASE_DIR, 'results')\n",
-    "asjhdga"
+    "result_dir = os.path.join(BASE_DIR, 'results')"
    ]
   },
   {
@@ -595,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 284,
+   "execution_count": 8,
    "id": "96097522",
    "metadata": {},
    "outputs": [],
@@ -671,7 +670,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 304,
+   "execution_count": 11,
    "id": "bbac2212",
    "metadata": {},
    "outputs": [
@@ -679,8 +678,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[9, 21, 1, 19, 14, 6], [13, 20, 17, 10, 12], [15, 4, 16, 3, 2], [8, 11, 18, 5, 7]]\n",
-      "[[14, 1, 19, 8, 20], [7, 17, 10, 4, 5], [21, 9, 18, 2, 12, 15], [3, 13, 11, 6, 16]]\n"
+      "[[17, 21, 20, 3, 7, 10], [18, 1, 19, 15, 8], [12, 14, 9, 5, 11], [13, 16, 2, 6, 4]]\n",
+      "[[20, 17, 16, 14], [10, 11, 8, 9, 4, 5], [12, 6, 19, 7, 21], [15, 3, 13, 18, 1, 2]]\n"
      ]
     }
    ],
